Update Overlap Area Game.ipynb

--- a/Overlap Area Game.ipynb
+++ b/Overlap Area Game.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "!pip install ipynb\n",
-    "from ipynb.fs.defs.Assignment0701 import WarAndPeacePseudoRandomNumberGenerator\n",
+    "from ipynb.fs.defs.RandomNumbersGenerator import WarAndPeacePseudoRandomNumberGenerator\n",
     "import random\n",
     "import math"
    ]
